--- a/themes/icarus/include/style/components/article/large-card.styl
+++ b/themes/icarus/include/style/components/article/large-card.styl
@@ -199,6 +199,10 @@ article.article
         .level-item
             margin-right: 1.5rem
 
+            div
+                p
+                    font-size: $size-7
+
         .icons
             .icon
                 margin-left: 0.25rem
