--- a/themes/icarus/include/style/components/footer.styl
+++ b/themes/icarus/include/style/components/footer.styl
@@ -10,6 +10,9 @@ footer.footer
         +mobile()
             text-align: center
 
+        p
+            font-size: $size-7
+
     .level-end
         .field
             flex-wrap: wrap
@@ -29,6 +32,7 @@ footer.footer
         text-decoration: underline solid
 
     .footer-logo
+        display: block
         margin-bottom: 0.5rem
 
         img
