--- a/themes/icarus/include/style/components/helper.styl
+++ b/themes/icarus/include/style/components/helper.styl
@@ -1,9 +1,9 @@
 /* ---------------------------------
  *           Flex helpers
  * --------------------------------- */
-for n in (0 .. 5)
+/*for n in (0 .. 5)
     .order-{n}
-        order: n !important
+        order: n !important*/
 
 //$justify-contents = start center
 $justify-contents = center
