--- a/themes/icarus/include/style/components/widget/basic-card.styl
+++ b/themes/icarus/include/style/components/widget/basic-card.styl
@@ -16,11 +16,11 @@ article.media
         color: $text-light
 
         .date
-            @extend .is-block
+            display: block
             font-size: $size-7
 
         .title
-            @extend .is-block
+            display: block
             margin: 0
             line-height: inherit
             font-size: $size-6
