--- a/themes/icarus/include/style/pages/posts.styl
+++ b/themes/icarus/include/style/pages/posts.styl
@@ -1,5 +1,7 @@
 // Base CSS framework
 @import '../slim-bulma-stylus/variables'
+@import '../slim-bulma-stylus/base/minireset-extend'
+@import '../slim-bulma-stylus/base/generic-extend'
 @import bulma-stylus-root + '/utilities/mixins'
 @import bulma-stylus-root + '/utilities/controls'
 // Helper classes & mixins
