--- a/themes/icarus/include/style/slim-bulma-stylus/form-tool/field-addons.styl
+++ b/themes/icarus/include/style/slim-bulma-stylus/form-tool/field-addons.styl
@@ -8,15 +8,15 @@
                 margin-right: -1px
 
             &:not(:first-child):not(:last-child)
-                .button, .input, .select select
+                &.button, &.input, &.select select
                     border-radius: 0
 
             &:first-child:not(:only-child)
-                .button, .input, .select select
+                &.button, &.input, &.select select
                     border-bottom-right-radius: 0
                     border-top-right-radius: 0
 
             &:last-child:not(:only-child)
-                .button, .input, .select select
+                &.button, &.input, &.select select
                     border-bottom-left-radius: 0
                     border-top-left-radius: 0
