--- a/themes/icarus/include/style/slim-bulma-stylus/base/minireset.styl
+++ b/themes/icarus/include/style/slim-bulma-stylus/base/minireset.styl
@@ -1,4 +1,4 @@
-html, body, p, ol, ul, li, dl, dt, dd, blockquote, figure, pre, iframe, h1, h2, h3, h4, h5, h6
+html, body, p, ol, ul, li, figure, h1, h2, h3, h4, h5, h6
     margin: 0
     padding: 0
 
@@ -8,9 +8,6 @@ h1, h2, h3, h4, h5, h6
 
 ul
     list-style: none
-
-button
-    margin: 0
 
 html
     box-sizing: border-box
@@ -23,16 +20,3 @@ html
 img, video
     height: auto
     max-width: 100%
-
-iframe
-    border: 0
-
-table
-    border-collapse: collapse
-    border-spacing: 0
-
-td, th
-    padding: 0
-
-    &:not([align])
-        text-align: left
