imageスタイルを全ページで共通化

--- a/themes/icarus/include/style/pages/home.styl
+++ b/themes/icarus/include/style/pages/home.styl
@@ -12,6 +12,7 @@
 @import '../components/shared-imports/tags'
 @import '../components/shared-imports/control'
 @import '../components/shared-imports/title'
+@import '../components/shared-imports/image'
 @import '../components/article/small-card'
 @import '../components/widget/basic-card'
 @import '../components/pagination'
