--- a/themes/icarus/include/style/pages/posts.styl
+++ b/themes/icarus/include/style/pages/posts.styl
@@ -14,6 +14,7 @@
 @import '../components/shared-imports/tags'
 @import '../components/shared-imports/control'
 @import '../components/shared-imports/title'
+@import '../components/shared-imports/image'
 @import '../components/article/large-card'
 @import '../components/article/post-navigation'
 @import '../components/widget/toc-card'
