--- a/themes/icarus/include/style/pages/categories.styl
+++ b/themes/icarus/include/style/pages/categories.styl
@@ -12,6 +12,7 @@
 @import '../components/shared-imports/tags'
 @import '../components/shared-imports/control'
 @import '../components/shared-imports/title'
+@import '../components/shared-imports/image'
 @import '../components/widget/basic-card'
 @import '../components/plugins/back_to_top'
 @import '../components/button'
