--- a/themes/icarus/include/style/components/article/small-card.styl
+++ b/themes/icarus/include/style/components/article/small-card.styl
@@ -1,2 +1,6 @@
 @import '../../slim-bulma-stylus/element/content-small'
 @import 'basic-card'
+
+article.article
+    a.title
+        display: block
