ギャラリープラグインのリファクタ

--- a/themes/icarus/include/style/components/plugins/gallery.styl
+++ b/themes/icarus/include/style/components/plugins/gallery.styl
@@ -3,4 +3,6 @@
  * --------------------------------- */
 .gallery-item
     .caption
+        text-align: center
         color: $text-light
+        font-size: $size-6
