--- a/themes/icarus/include/style/pages/posts.styl
+++ b/themes/icarus/include/style/pages/posts.styl
@@ -16,6 +16,7 @@
 @import '../components/shared-imports/title'
 @import '../components/shared-imports/image'
 @import '../components/article/large-card'
+@import '../slim-bulma-stylus/component/message'
 @import '../components/article/post-navigation'
 @import '../components/widget/toc-card'
 @import '../components/widget/basic-card'
