--- a/themes/icarus/include/style/components/search.styl
+++ b/themes/icarus/include/style/components/search.styl
@@ -1,3 +1,5 @@
+@import '../slim-bulma-stylus/component/modal-vars'
+
 /* ---------------------------------
  *           Search Box
  * --------------------------------- */
