ウィジェットの見出しの文字サイズを大きくする

--- a/themes/icarus/include/style/components/widget/basic-card.styl
+++ b/themes/icarus/include/style/components/widget/basic-card.styl
@@ -34,6 +34,9 @@ article.media
             font-size: $size-7
 
 .widget
+    .menu-label
+        font-size: 1rem
+
     .menu-list
         .level
             margin-bottom: 0
