ウィジェットコンポーネントのリファクタ

--- a/themes/icarus/include/style/slim-bulma-stylus/component/card.styl
+++ b/themes/icarus/include/style/slim-bulma-stylus/component/card.styl
@@ -2,7 +2,7 @@ $card-color ?= $text
 $card-background-color ?= $scheme-main
 $card-shadow ?= 0 0.5em 1em -0.125em rgba($scheme-invert, 0.1), 0 0px 0 1px rgba($scheme-invert, 0.02)
 
-$card-content-background-color ?= transparent
+$card-content-background-color ?= $card-background-color
 $card-content-padding ?= 1.5rem
 
 $card-media-margin ?= $block-spacing
