フッターコンポーネントのリファクタ

--- a/themes/icarus/include/style/components/footer.styl
+++ b/themes/icarus/include/style/components/footer.styl
@@ -15,7 +15,7 @@ footer.footer
             font-size: $size-7
 
     .level-end
-        .field
+        &.field
             flex-wrap: wrap
             align-items: center
 
