--- a/themes/icarus/include/style/slim-bulma-stylus/component/pagination.styl
+++ b/themes/icarus/include/style/slim-bulma-stylus/component/pagination.styl
@@ -25,6 +25,8 @@ $pagination-current-color ?= $link-invert
 $pagination-current-background-color ?= $link
 $pagination-current-border-color ?= $link
 
+$pagination-ellipsis-color ?= $grey-light
+
 $pagination-shadow-inset = inset 0 1px 2px rgba($scheme-invert, 0.2)
 
 .pagination
@@ -38,7 +40,7 @@ $pagination-shadow-inset = inset 0 1px 2px rgba($scheme-invert, 0.2)
     justify-content: center
     text-align: center
 
-.pagination-previous, .pagination-next, .pagination-link
+.pagination-previous, .pagination-next, .pagination-link, .pagination-ellipsis
     @extend $control
     @extend $unselectable
     font-size: $pagination-item-font-size
@@ -81,6 +83,10 @@ $pagination-shadow-inset = inset 0 1px 2px rgba($scheme-invert, 0.2)
         border-color: $pagination-current-border-color
         color: $pagination-current-color
 
+.pagination-ellipsis
+    color: $pagination-ellipsis-color
+    pointer-events: none
+
 .pagination-list
     flex-wrap: wrap
 
@@ -101,14 +107,6 @@ $pagination-shadow-inset = inset 0 1px 2px rgba($scheme-invert, 0.2)
     .pagination-list
         flex-grow: 1
         flex-shrink: 1
-        justify-content: flex-start
-        order: 1
-
-    .pagination-previous
-        order: 2
-
-    .pagination-next
-        order: 3
 
     .pagination
         justify-content: space-between
