ナビゲーションコンポーネントのリファクタ

--- a/themes/icarus/include/style/components/helper.styl
+++ b/themes/icarus/include/style/components/helper.styl
@@ -5,12 +5,12 @@
     .order-{n}
         order: n !important*/
 
-//$justify-contents = start center
+/*$justify-contents = start center
 $justify-contents = center
 
 for $name in $justify-contents
     .justify-content-{$name}
-        justify-content: $name !important
+        justify-content: $name !important*/
 
 /* ---------------------------------
  *           Color helpers
