順序付き・順序なしリストで同一タグを入れ子にした時のレイアウト修正

--- a/themes/icarus/include/style/slim-bulma-stylus/element/content-large.styl
+++ b/themes/icarus/include/style/slim-bulma-stylus/element/content-large.styl
@@ -65,13 +65,13 @@
 
         ul
             list-style-type: circle
-            margin-top: 0.5em
 
             ul
                 list-style-type: square
 
-    ol > li > ul, ul > li > ol
-        margin-top: 0.25em
+    ol, ul
+        ol, ul
+            margin-top: 0.25em
 
     figure
         text-align: center
