--- a/themes/icarus/include/style/slim-bulma-stylus/element/content-large.styl
+++ b/themes/icarus/include/style/slim-bulma-stylus/element/content-large.styl
@@ -37,6 +37,8 @@
         background-color: $content-blockquote-background-color
         border-left: $content-blockquote-border-left
         padding: $content-blockquote-padding
+        white-space: nowrap
+        overflow-x: auto
 
     ol
         list-style-position: outside
