--- a/themes/icarus/include/style/slim-bulma-stylus/element/content-large.styl
+++ b/themes/icarus/include/style/slim-bulma-stylus/element/content-large.styl
@@ -37,8 +37,21 @@
         background-color: $content-blockquote-background-color
         border-left: $content-blockquote-border-left
         padding: $content-blockquote-padding
-        white-space: nowrap
+        display: flex
+        flex-flow: column
         overflow-x: auto
+
+        p
+            position: relative
+            width: fit-content
+            white-space: nowrap
+
+            &::after
+                position: absolute
+                top: 0
+                width: 1.5em
+                height: 1px
+                content: ''
 
     ol
         list-style-position: outside
