--- a/themes/icarus/include/style/components/widget/basic-card.styl
+++ b/themes/icarus/include/style/components/widget/basic-card.styl
@@ -21,6 +21,8 @@ article.media
 
         .title
             display: block
+            width: -moz-fit-content
+            width: fit-content
             margin: 0
             line-height: inherit
             font-size: $size-6
