全てのsvgタグのfillプロパティにcurrentColorを設定する

--- a/themes/icarus/include/style/components/footer.styl
+++ b/themes/icarus/include/style/components/footer.styl
@@ -29,9 +29,8 @@ footer.footer
             border-color: transparent
 
             &.is-large svg
-                width: 2rem;
-                height: 2rem;
-                fill: $text
+                width: 2rem
+                height: 2rem
 
     .underline
         text-decoration: underline solid
