--- a/themes/icarus/include/style/components/article/post-navigation.styl
+++ b/themes/icarus/include/style/components/article/post-navigation.styl
@@ -4,40 +4,32 @@
 $post-navigation-fg ?= #545454
 
 .post-navigation
+    @extend .level.is-mobile
     color: $post-navigation-fg
     flex-wrap: wrap
-    justify-content: space-around
+    justify-content: space-between
     margin-top: 1.5rem
 
-    .level-start,
-    .level-end
+    .level-start, .level-end
         display: flex
-        flex-basis: 50%
+        flex-basis: auto
+        max-width: 50%
 
-        .article-nav-prev,
-        .article-nav-next
-            fill: $post-navigation-fg
+        .article-nav-prev, .article-nav-next
+            @extend .level-item, .link-muted
             flex-grow: 1
             flex-shrink: 1
 
-            span
-                margin-bottom: 0
-                line-break: strict
-                flex-shrink: 1
-                word-wrap: break-word
-                white-space: normal
-
             .nav-arrow-icon
-                margin-right: 0.5rem
-                margin-left: 0.5rem
-                margin-bottom: 0
+                flex-shrink: 0
+                margin: 0 0.25rem 0.125rem
                 width: 1rem
                 height: 1rem
 
         .article-nav-prev
-            span
-                text-align: left
+            justify-content: start
+            text-align: left
 
         .article-nav-next
-            span
-                text-align: right
+            justify-content: end
+            text-align: right
