ブロック引用内リンクのカラーコントラストを調整

--- a/themes/icarus/include/style/components/article/large-card.styl
+++ b/themes/icarus/include/style/components/article/large-card.styl
@@ -70,6 +70,13 @@ article.article
             a
                 text-decoration-line: underline
 
+        blockquote
+            a
+                color: #1950A4
+
+                &:hover
+                    color: inherit
+
         .link-preview
             display: block
             border-width: $link-preview-card-border-width
