--- a/themes/icarus/include/style/components/widget/basic-card.styl
+++ b/themes/icarus/include/style/components/widget/basic-card.styl
@@ -1,4 +1,5 @@
 @import '../../slim-bulma-stylus/component/menu-basic'
+@import '../../slim-bulma-stylus/component/menu-list'
 @import '../../slim-bulma-stylus/component/media'
 @import '../../slim-bulma-stylus/form-tool/field-grouped'
 
