サブカテゴリーのレイアウト崩れを修正

--- a/themes/icarus/include/style/components/article/basic-card.styl
+++ b/themes/icarus/include/style/components/article/basic-card.styl
@@ -31,7 +31,7 @@ article.article
             content: '@'
 
         li + li:before
-            padding: 0.5rem
+            padding: 0 0.5rem
             content: '/'
 
     .content
