figcaptionにデザインが適用されない不具合を修正

--- a/themes/icarus/include/style/components/plugins/gallery.styl
+++ b/themes/icarus/include/style/components/plugins/gallery.styl
@@ -1,8 +1,7 @@
 /* ---------------------------------
  *          Gallery Plugin
  * --------------------------------- */
-.gallery-item
-    .caption
-        text-align: center
-        color: $text-light
-        font-size: $size-6
+.gallery-caption
+    text-align: center
+    color: $text-light
+    font-size: $size-6
