--- a/themes/icarus/include/style/components/card.styl
+++ b/themes/icarus/include/style/components/card.styl
@@ -4,7 +4,6 @@
  *              Card
  * --------------------------------- */
 .card
-    overflow: visible
     border-radius: $card-radius
 
     & + .card, & + .column-right-shadow
@@ -14,6 +13,9 @@
         overflow: hidden
         border-top-left-radius: $card-radius
         border-top-right-radius: $card-radius
+
+    .card-content
+        border-radius: $card-radius
 
     .media + .media
         border: none
