ベース及びナビゲーションのスタイルリファクタ

--- a/themes/icarus/include/style/components/navbar.styl
+++ b/themes/icarus/include/style/components/navbar.styl
@@ -71,4 +71,4 @@ $navbar-item-margin-h ?= 0
 
 @media screen and (min-width: $desktop)
     .navbar > .container .navbar-menu, .container > .navbar .navbar-menu
-        margin-right: 0rem
+        margin-right: 0
