記事の本文の行の高さを広めに調整

--- a/themes/icarus/include/style/components/article/basic-card.styl
+++ b/themes/icarus/include/style/components/article/basic-card.styl
@@ -37,6 +37,7 @@ article.article
     .content
         word-wrap: break-word
         font-size: $size-5_5
+        line-height: 1.75
 
     .article-tags
         display: flex
