コードブロックの行間をベース設定に合わせる

--- a/themes/icarus/include/style/components/codeblock.styl
+++ b/themes/icarus/include/style/components/codeblock.styl
@@ -9,6 +9,7 @@ $codeblock-caption-bg ?= rgba(200, 200, 200, .15)
     position: relative
     margin: 1em 0 1em !important
     border-radius: $radius
+    line-height: 1.5
 
     &.folded
         .highlight-body
