messageボックス本文で最初にある子要素のmargin-topを0にする

--- a/themes/icarus/include/style/slim-bulma-stylus/component/message.styl
+++ b/themes/icarus/include/style/slim-bulma-stylus/component/message.styl
@@ -109,3 +109,6 @@ $message-colors ?= {
 
     code, pre
         background-color: $message-body-pre-background-color
+
+    :first-child
+        margin-top: 0
