テーブルセルのレイアウト調整

--- a/themes/icarus/include/style/components/article/large-card.styl
+++ b/themes/icarus/include/style/components/article/large-card.styl
@@ -79,6 +79,10 @@ article.article
                 &:hover
                     color: inherit
 
+        table
+            td:not(:last-child)
+                min-width: 6.85rem
+
         .link-preview
             display: block
             overflow: hidden
