リンクプレビュー説明文の文字色のコントラストエラーを修正

--- a/themes/icarus/include/style/components/article/large-card.styl
+++ b/themes/icarus/include/style/components/article/large-card.styl
@@ -9,7 +9,7 @@ $link-preview-card-border ?= 1px solid #cbd0d3
 $link-preview-card-radius ?= 8px
 $link-preview-card-margin ?= 1rem 0
 $link-preview-card-bg-color ?= #f2f3f5
-$link-preview-card-og-description-color ?= #757c83
+$link-preview-card-og-description-color ?= #525252
 
 article.article
     .content
