--- a/themes/icarus/include/style/components/article/large-card.styl
+++ b/themes/icarus/include/style/components/article/large-card.styl
@@ -56,7 +56,7 @@ article.article
 
         h4
             border-bottom: double 3px #ffa500
-            padding-bottom: 3px
+            padding: 0 0.375rem 0.25rem
             font-size: $size-4
 
         h5
