--- a/themes/icarus/include/style/components/timeline.styl
+++ b/themes/icarus/include/style/components/timeline.styl
@@ -28,18 +28,18 @@ $timeline-bg-line ?= $card-background-color
         &:before
             width: .75rem
             height: .75rem
-            top: calc(1rem + 1.5 * .85rem / 2 - .75rem / 2)
+            top: calc(.5rem + 1.5 * .85rem / 2 - .75rem / 2)
             background: $timeline-fg-circle
             border-radius: 50%
 
         &:first-child:before
-            top: calc(1.5 * .85rem / 2 - .75rem / 2)
+            top: calc(2.5 * .85rem / 2 - .75rem / 2)
 
         &:last-child:after
             width: .75rem
-            top: calc(1rem + 1.5 * .85rem / 2 + .75rem / 2)
+            top: calc(.5rem + 1.5 * .85rem / 2 + .75rem / 2)
             bottom: 0
             background: $timeline-bg-line
 
         &:first-child:last-child:after
-            top: calc(1.5 * .85rem / 2 + .75rem / 2)
+            top: calc(2.5 * .85rem / 2 + .75rem / 2)
