記事メディアコンポーネント及びスタイルのリファクタ

--- a/themes/icarus/include/style/components/widget/basic-card.styl
+++ b/themes/icarus/include/style/components/widget/basic-card.styl
@@ -21,19 +21,15 @@
             height: 100%
 
     .media-content
+        display: flex
+        flex-flow: column
         color: $text-light
         font-size: $size-7
-
-        .date
-            display: block
 
         .title
             margin: 0
             line-height: inherit
             font-size: $size-6
-
-        .categories
-            @extend .is-capitalized
 
 .widget
     .menu-label
