記事ライセンスのメタ情報のレイアウトを調整

--- a/themes/icarus/include/style/components/article/large-card.styl
+++ b/themes/icarus/include/style/components/article/large-card.styl
@@ -171,11 +171,11 @@ article.article
 
     .licensing-meta
         .level-item
-            margin-right: 1.5rem
+            flex-flow: column
+            align-items: start
 
-            div
-                p
-                    font-size: $size-7
+            p
+                font-size: $size-7
 
         .icons
             .icon
