--- a/themes/icarus/include/style/slim-bulma-stylus/component/menu-list.styl
+++ b/themes/icarus/include/style/slim-bulma-stylus/component/menu-list.styl
@@ -1,8 +1,7 @@
 @import 'menu-vars'
 
 .menu-list
-    li
-        ul
-            border-left: $menu-list-border-left
-            margin: $menu-nested-list-margin
-            padding-left: $menu-nested-list-padding-left
+    li ul, div
+        border-left: $menu-list-border-left
+        margin: $menu-nested-list-margin
+        padding-left: $menu-nested-list-padding-left
