各種レイアウトコンポーネントのリファクタ

--- a/themes/icarus/include/style/components/footer.styl
+++ b/themes/icarus/include/style/components/footer.styl
@@ -14,6 +14,9 @@ footer.footer
         p
             font-size: $size-7
 
+            a
+                text-decoration: underline solid
+
     .level-end
         &.field
             flex-wrap: wrap
@@ -31,9 +34,6 @@ footer.footer
             &.is-large svg
                 width: 2rem
                 height: 2rem
-
-    .underline
-        text-decoration: underline solid
 
     .footer-logo
         display: block
