記事のタイトルとメタ情報のデザイン修正

--- a/themes/icarus/include/style/components/article/basic-card.styl
+++ b/themes/icarus/include/style/components/article/basic-card.styl
@@ -9,10 +9,11 @@ article.article
 
     .article-meta
         overflow-x: auto
-        margin-bottom: .5rem
+        margin-bottom: 0.25rem
 
     .title
         font-size: $size-2
+        line-height: 1.5
 
     +mobile()
         .title
