headerとfigureのスタイルを修正

--- a/themes/icarus/include/style/components/article/large-card.styl
+++ b/themes/icarus/include/style/components/article/large-card.styl
@@ -15,7 +15,7 @@ article.article
     .content
         h2
             position: relative
-            margin: 1rem -8px 1rem -32px
+            margin: 0 -8px 1rem -32px
             padding: 1rem
             border-radius: 0 1vh 1vh 0
             -webkit-box-shadow: 3px 3px 5px rgba(0, 0, 0, .2)
@@ -36,7 +36,7 @@ article.article
 
         h3
             position: relative
-            margin-top: 0.5rem
+            margin-top: 0
             margin-left: -10px
             padding: 1rem 0 1rem 2rem
             border-radius: 15vh 0 0 15vh
@@ -55,6 +55,7 @@ article.article
             content: ''
 
         h4
+            margin-bottom: 0.75rem
             border-bottom: double 3px #ffa500
             padding: 0 0.375rem 0.25rem
             font-size: $size-4
@@ -65,6 +66,9 @@ article.article
         p
             a
                 text-decoration-line: underline
+
+        figure
+            margin-bottom: 0.5rem
 
         blockquote
             a
