--- a/themes/icarus/include/style/slim-bulma-stylus/component/pagination.styl
+++ b/themes/icarus/include/style/slim-bulma-stylus/component/pagination.styl
@@ -25,7 +25,7 @@ $pagination-current-color ?= $link-invert
 $pagination-current-background-color ?= $link
 $pagination-current-border-color ?= $link
 
-$pagination-ellipsis-color ?= $grey-light
+$pagination-ellipsis-color ?= $link-active
 
 $pagination-shadow-inset = inset 0 1px 2px rgba($scheme-invert, 0.2)
 
