--- a/themes/icarus/include/style/components/article/large-card.styl
+++ b/themes/icarus/include/style/components/article/large-card.styl
@@ -55,12 +55,18 @@ article.article
             content: ''
 
         h4
-            margin-bottom: 0.75rem
-            border-bottom: double 3px #ffa500
-            padding: 0 0.375rem 0.25rem
+            margin-left: -5px
+            margin-bottom: 0.6rem
+            background: #fffaf4
+            border-left: solid 5px #ffa500
+            border-bottom: solid 1px #ffa500
+            padding: 0.5rem 0.375rem 0.5rem 0.5rem
             font-size: $size-4
 
         h5
+            margin-bottom: 0.5rem
+            border-bottom: solid 2px #fcc800
+            padding: 0 0.375rem
             font-size: $size-5
 
         p
