--- a/themes/icarus/include/style/components/article/large-card.styl
+++ b/themes/icarus/include/style/components/article/large-card.styl
@@ -56,7 +56,6 @@ article.article
 
         h4
             margin-left: -5px
-            margin-bottom: 0.6rem
             background: #fffaf4
             border-left: solid 5px #ffa500
             border-bottom: solid 1px #ffa500
@@ -64,9 +63,8 @@ article.article
             font-size: $size-4
 
         h5
-            margin-bottom: 0.5rem
             border-bottom: solid 2px #fcc800
-            padding: 0 0.375rem
+            padding: 0.25rem 0.375rem
             font-size: $size-5
 
         p
