検索ボックスを閉じるデザインをリンクからボタンに変更

--- a/themes/icarus/include/style/components/search.styl
+++ b/themes/icarus/include/style/components/search.styl
@@ -109,9 +109,12 @@ $searchbox-bg-pagination-item-disabled ?= $searchbox-bg-container
         background: $searchbox-bg-input
 
     .searchbox-close
+        border: none
+        color: inherit
+        background-color: inherit
         flex-grow: 0
         font-size: $size-3
-        padding: 0.5em
+        padding: 0.262em 0.5em
         cursor: pointer
 
         &:hover
