カタログと検索のアイコンをリンクからボタンに変更

--- a/themes/icarus/include/style/slim-bulma-stylus/component/navbar.styl
+++ b/themes/icarus/include/style/slim-bulma-stylus/component/navbar.styl
@@ -44,7 +44,7 @@ $navbar-breakpoint ?= $desktop
     padding: 0.5rem 0.75rem
     position: relative
 
-a.navbar-item
+a.navbar-item, button.navbar-item
     cursor: pointer
 
     &:focus, &:focus-within, &:hover, &.is-active
