--- a/themes/icarus/include/style/components/navbar.styl
+++ b/themes/icarus/include/style/components/navbar.styl
@@ -36,6 +36,8 @@ $navbar-item-margin-h ?= 0
     .navbar-item
         display: flex
         align-items: center
+        border: none
+        background-color: inherit
         padding: $navbar-item-padding-v $navbar-item-padding-h
         margin: $navbar-item-margin-v $navbar-item-margin-h
 
