コードブロック関連のデザインを変更

--- a/themes/icarus/include/style/slim-bulma-stylus/variables.styl
+++ b/themes/icarus/include/style/slim-bulma-stylus/variables.styl
@@ -48,6 +48,13 @@ $success-invert ?= #3b3b3b
 $success-light ?= #f4fbf6
 $success-dark ?= #1f6136
 
+$code ?= #a70c2a
+$code-background ?= #f3f2f2
+$code-size ?= $size-normal
+$code-padding ?= 0.178rem 0.0715rem
+
+$pre-font-size ?= $size-normal
+
 $navbar-item-active-color ?= $primary
 $footer-background-color ?= $scheme-main
 
