--- a/themes/icarus/include/style/components/codeblock.styl
+++ b/themes/icarus/include/style/components/codeblock.styl
@@ -15,9 +15,6 @@ $codeblock-caption-bg ?= rgba(200, 200, 200, .15)
         .highlight-body
             height: 0
 
-    .copy
-        opacity: .7
-
     pre, table tr:hover
         color: inherit
         background: transparent
@@ -65,6 +62,12 @@ $codeblock-caption-bg ?= rgba(200, 200, 200, .15)
 
         .fold
             cursor: pointer
+
+        .copy
+            border: none
+            padding: 0 0.75em 0 0
+            background-color: inherit
+            opacity: .7
 
         &.level
             overflow: auto
@@ -116,23 +119,25 @@ figure.highlight.foldable, div.highlight.foldable
     .file
         all: initial
 
-svg_icon(w, h, bgc, name)
+svg_icon(w, h, m, bgc, name)
     display: inline-block
     content: ''
     background-color: bgc
     width: w
     height: h
+    margin: m
     -webkit-mask: name
     mask: name
     -webkit-mask-size: cover
     mask-size: cover
+    text-align: center
     vertical-align: sub
 
 .svg-angle-down:before
-    svg_icon(calc(0.8em * 1.5 * 0.875), calc(0.8em * 1.5), rgb(220, 220, 220), url('/img/angle-down.svg'))
+    svg_icon(18px, 18px, 0, rgb(220, 220, 220), url('/img/angle-down.svg'))
 
 .svg-angle-right:before
-    svg_icon(calc(0.8em * 1.5 * 0.625), calc(0.8em * 1.5), rgb(220, 220, 220), url('/img/angle-right.svg'))
+    svg_icon(12.6px, 18px, 0 2.7px, rgb(220, 220, 220), url('/img/angle-right.svg'))
 
 .svg-copy:before
-    svg_icon(calc(0.8em * 1.5 * 0.875), calc(0.8em * 1.5), rgb(220, 220, 220), url('/img/copy.svg'))
+    svg_icon(16px, 18px, 0, rgb(220, 220, 220), url('/img/copy.svg'))
