--- a/themes/icarus/include/style/slim-bulma-stylus/base/generic-extend.styl
+++ b/themes/icarus/include/style/slim-bulma-stylus/base/generic-extend.styl
@@ -11,6 +11,8 @@ code
     font-size: $code-size
     font-weight: $code-weight
     padding: $code-padding
+    border-radius: $code-border-radius
+    overflow-wrap: break-word
 
 strong
     color: $strong-color
