--- a/themes/icarus/include/style/slim-bulma-stylus/base/generic-vars.styl
+++ b/themes/icarus/include/style/slim-bulma-stylus/base/generic-vars.styl
@@ -15,6 +15,7 @@ $code-family ?= $family-code
 $code-padding ?= 0.25em 0.5em 0.25em
 $code-weight ?= normal
 $code-size ?= 0.875em
+$code-border-radius ?= 0.25rem
 
 $small-font-size ?= 0.875em
 
