--- a/themes/icarus/include/style/components/article/large-card.styl
+++ b/themes/icarus/include/style/components/article/large-card.styl
@@ -11,7 +11,7 @@ $link-preview-card-margin ?= 1rem 0
 $link-preview-card-bg-color ?= #f2f3f5
 $link-preview-card-og-description-color ?= #525252
 
-article.article
+.article
     .content
         h2
             position: relative
@@ -146,6 +146,7 @@ article.article
     background: $white-ter
     border-radius: $radius
     overflow: hidden
+    margin: 0 1.5rem
 
     &:after
         position: absolute
