--- a/themes/icarus/include/style/components/article/small-card.styl
+++ b/themes/icarus/include/style/components/article/small-card.styl
@@ -1,8 +1,8 @@
 @import '../../slim-bulma-stylus/element/content-small'
 @import 'basic-card'
 
-article.article
-    a.title, a.content
+.article
+    a.content
         display: block
         width: -moz-fit-content
         width: fit-content
