コードブロックに関するデザインと処理を変更

--- a/themes/icarus/include/style/components/codeblock.styl
+++ b/themes/icarus/include/style/components/codeblock.styl
@@ -60,7 +60,7 @@ $codeblock-caption-bg ?= rgba(200, 200, 200, .15)
         .level-right *:not(:first-child)
             margin-left: .5em
 
-        .fold
+        .fold, .copy
             cursor: pointer
 
         .copy
