--- a/themes/icarus/include/style/slim-bulma-stylus/element/content-large.styl
+++ b/themes/icarus/include/style/slim-bulma-stylus/element/content-large.styl
@@ -6,7 +6,7 @@
     li + li
         margin-top: 0.25em
 
-    p, dl, ol, ul, blockquote, pre, table, aside
+    p, dl, ol, ul, blockquote, pre, table, aside, figure
         &:not(:last-child)
             margin-bottom: 1em
 
