--- a/themes/icarus/include/style/components/plugins/back_to_top.styl
+++ b/themes/icarus/include/style/components/plugins/back_to_top.styl
@@ -3,22 +3,20 @@
  * --------------------------------- */
 #back-to-top
     position: fixed
+    width: 48px
+    height: 48px
+    right: 24px
+    bottom: 24px
+    box-shadow: $card-shadow
+    border-radius: 50%
+    z-index: 99
     opacity: 0
-    outline: none
-    padding: 8px 0
-    border-radius: $card-radius
-    transform: translateY(120px)
-    transition: .4s ease opacity, .4s ease width, .4s ease transform, .4s ease border-radius
-
-    &.is-rounded
-        border-radius: 50%
+    visibility: hidden
+    transition: 0.2s
 
     &.fade-in
         opacity: 1
-
-    &.rise-up
-        transform: translateY(0)
-        z-index: 2
+        visibility: visible
 
     svg
         vertical-align: middle
