コードブロックのスタイルを変更

--- a/themes/icarus/include/style/components/codeblock.styl
+++ b/themes/icarus/include/style/components/codeblock.styl
@@ -43,7 +43,7 @@ $codeblock-caption-bg ?= rgba(200, 200, 200, .15)
 
     figcaption, .caption
         margin: 0 !important
-        padding: .3em 0em .3em .75em
+        padding: 0.5em 0.75em
         font-style: normal
         font-size: .8em
 
@@ -65,16 +65,11 @@ $codeblock-caption-bg ?= rgba(200, 200, 200, .15)
 
         .copy
             border: none
-            padding: 0 0.75em 0 0
             background-color: inherit
             opacity: .7
 
         &.level
             overflow: auto
-
-            .level-right
-                a
-                    padding: 0em .75em
 
     .highlight-body
         overflow: auto
